Calculated mean Rating

--- a/StatScript.ipynb
+++ b/StatScript.ipynb
@@ -8,7 +8,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "309e8b2b",
    "metadata": {},
    "outputs": [],
@@ -17,6 +17,68 @@
     "import pandas as pd\n",
     "import numpy as np\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6fea8d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0.5   1  1.5    2  2.5    3  3.5    4  4.5    5\n",
+      "0   31  57   57  108  116  214  390  497  389  215\n",
+      "1   27  83   78   84  110  199  238  253  154   82\n",
+      "2   39  66  103  149  189  256  282  303   82   29\n",
+      "3   26  96  121  207  279  453  529  446  258  131\n",
+      "4   37  72  191  341  454  724  622  451  190   97\n",
+      "   mean  average\n",
+      "0  3.61     3.61\n",
+      "1  3.21     3.21\n",
+      "2  3.00     3.00\n",
+      "3  3.23     3.23\n",
+      "4  3.05     3.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open the CSV file using pandas into a data frame\n",
+    "csv_file_path = '/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/Copy_popular_users_ratings_1k.csv'\n",
+    "df = pd.read_csv(csv_file_path)\n",
+    "\n",
+    "#two ways to get the mean rating for each user\n",
+    "\n",
+    "# Get the mean rating for each user\n",
+    "df['mean'] = (df['0.5']*0.5 + df['1']*1.0 + df['1.5']*1.5 + df['2']*2.0 + df['2.5']*2.5 + df['3']*3.0 + df['3.5']*3.5 + df['4']*4.0 + df['4.5']*4.5 + df['5']*5.0)/df['total']\n",
+    "#Round the mean to 2 decimal places\n",
+    "df['mean'] = df['mean'].round(2)\n",
+    "\n",
+    "\n",
+    "# Extract only the ratings columns for correlation calculation\n",
+    "ratings = df.iloc[:, 1:11]\n",
+    "print(ratings.head(n = 5))\n",
+    "#define the weights\n",
+    "weights = [0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5, 5.0]\n",
+    "#take the dot product of ratings and weights\n",
+    "df['weighted_sum'] = ratings.dot(weights)\n",
+    "df['average'] = df['weighted_sum'] / df['total']\n",
+    "#Round the average to 2 decimal places\n",
+    "df['average'] = df['average'].round(2)\n",
+    "\n",
+    "# Verify that both methods give the same result\n",
+    "print(df[['mean', 'average']].head(n=5))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c90e9b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -26,7 +88,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
