final version adding mean script

--- a/StatScript.ipynb
+++ b/StatScript.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "id": "78b20783",
    "metadata": {},
-   "source": []
+   "source": [
+    "Fi"
+   ]
   },
   {
    "cell_type": "code",
@@ -74,8 +76,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "2c90e9b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       username  0.5   1  1.5    2  2.5    3  3.5    4  4.5    5  total  \\\n",
+      "0      kurstboy   31  57   57  108  116  214  390  497  389  215   2074   \n",
+      "1  schaffrillas   27  83   78   84  110  199  238  253  154   82   1308   \n",
+      "2           jay   39  66  103  149  189  256  282  303   82   29   1498   \n",
+      "3    deathproof   26  96  121  207  279  453  529  446  258  131   2546   \n",
+      "4  davidehrlich   37  72  191  341  454  724  622  451  190   97   3179   \n",
+      "\n",
+      "   weighted_sum  mean  \n",
+      "0        7484.5  3.61  \n",
+      "1        4201.5  3.21  \n",
+      "2        4491.5  3.00  \n",
+      "3        8212.5  3.23  \n",
+      "4        9687.0  3.05  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Define a function which automates the above process\n",
+    "def add_mean_column(input_csv, output_csv, start_col, end_col, col_name):\n",
+    "    # Read the input CSV file into a DataFrame\n",
+    "    df = pd.read_csv(input_csv)\n",
+    "\n",
+    "    # Extract only the ratings columns for correlation calculation\n",
+    "    ratings = df.iloc[:, start_col:end_col]\n",
+    "\n",
+    "    # Define the weights based on the rating values\n",
+    "    weights = [i * 0.5 for i in range(1, end_col - start_col + 1)]\n",
+    "\n",
+    "    # Calculate the weighted sum and average\n",
+    "    df['weighted_sum'] = ratings.dot(weights)\n",
+    "    df[col_name] = df['weighted_sum'] / df['total']\n",
+    "\n",
+    "    # Round the new column to 2 decimal places\n",
+    "    df[col_name] = df[col_name].round(2)\n",
+    "\n",
+    "    # Drop the temporary weighted_sum column\n",
+    "    #df.drop(columns=['weighted_sum'], inplace=True)\n",
+    "\n",
+    "    print(df.head(n=5))\n",
+    "    # Save the updated DataFrame to the output CSV file\n",
+    "    df.to_csv(output_csv, index=False)\n",
+    "\n",
+    "# Example usage\n",
+    "input_csv = '/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/Copy_popular_users_ratings_1k.csv'\n",
+    "output_csv = '/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/Copy_popular_users_ratings_1k_with_avg.csv'\n",
+    "add_mean_column(input_csv, output_csv, 1, 11, 'mean')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab4fb524",
    "metadata": {},
    "outputs": [],
    "source": []
