--- a/StatScript.ipynb
+++ b/StatScript.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "76c91b2f",
    "metadata": {},
    "outputs": [],
@@ -129,6 +129,7 @@
     "df = pd.read_csv(csv_file_path)\n",
     "\n",
     "#function which subtracts the mean from each rating, squares the result, multiplies by the count, sums them, divides by total count, and takes the square root\n",
+    "#row is the input data frame, make sure the header is appropriately labeled\n",
     "def calculate_std_dev(row):\n",
     "    mean = row['mean']\n",
     "    variance = (\n",
