--- a/modified_data/StatScript.ipynb
+++ b/modified_data/StatScript.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "309e8b2b",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,17 @@
     "import csv\n",
     "import pandas as pd\n",
     "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ee9be8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_file_path = '/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modCopy_popular_users_ratings_1k.csv'\n",
+    "df = pd.read_csv(csv_file_path)"
    ]
   },
   {
