--- a/modified_data/StatScript.ipynb
+++ b/modified_data/StatScript.ipynb
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "76c91b2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Standard Deviation Calculation\n",
     "# Function to calculate standard deviation of ratings for each user\n",
-    "csv_file_path = '/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/Copy_popular_users_ratings_1k_with_avg.csv'\n",
+    "csv_file_path = '/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/Copy_popular_users_ratings_1k_with_avg.csv'\n",
     "df = pd.read_csv(csv_file_path)\n",
     "\n",
     "#function which subtracts the mean from each rating, squares the result, multiplies by the count, sums them, divides by total count, and takes the square root\n",
@@ -160,7 +160,9 @@
     "\n",
     "df['std_dev'] = df.apply(calculate_std_dev, axis=1)\n",
     "df['std_dev'] = df['std_dev'].round(2)\n",
-    "#print(df.head(n=20))"
+    "#print(df.head(n=20))\n",
+    "df['std_dev']=calculate_std_dev(df)\n",
+    "df.to_csv('/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/Copy_popular_users_ratings_1k_with_avg_std_dev.csv', index=False)"
    ]
   },
   {
