added standard deviation for movies

--- a/modified_data/StatScript.ipynb
+++ b/modified_data/StatScript.ipynb
@@ -176,32 +176,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ab4fb524",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       moviename     0.5      1    1.5      2    2.5       3     3.5       4  \\\n",
-      "0          anora   19791  28724  19071  71725  79269  243629  302981  637817   \n",
-      "1       conclave    1975   4483   4018  22017  34376  164693  305797  662101   \n",
-      "2  the-brutalist    3112   4769   4005  17371  23480   73049  110078  216286   \n",
-      "3   emilia-perez  127623  87080  52805  76352  52956   62687   42094   44554   \n",
-      "4    nickel-boys     419   1029   1108   4744   6915   20388   30017   63108   \n",
-      "\n",
-      "      4.5       5    total  \n",
-      "0  341139  327475  2071621  \n",
-      "1  258972  220027  1678459  \n",
-      "2  133509   89985   675644  \n",
-      "3   13016   15308   574475  \n",
-      "4   43724   38190   209642  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Movie rating calculations\n"
+    "#Movie rating calculations\n",
+    "csv_file_path='/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/movie_review_winner_reviews_all_times_modified.csv'\n",
+    "df = pd.read_csv(csv_file_path)\n",
+    "add_mean_column(csv_file_path, '/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/movie_review_winner_reviews_all_times_modified.csv', 1, 11, 'mean')\n",
+    "\n",
+    "df['std_dev'] = df.apply(calculate_std_dev, axis=1)\n",
+    "df['std_dev'] = df['std_dev'].round(2)\n",
+    "\n",
+    "df.to_csv('/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/movie_review_winner_reviews_all_times_modified.csv', index=False)\n"
    ]
   },
   {
