Created Connor Modified_data

--- a/modified_data/StatScript.ipynb
+++ b/modified_data/StatScript.ipynb
@@ -193,9 +193,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c88cb934",
+   "metadata": {},
+   "source": [
+    "Code Used for User distribution: Copy pasted from Data Wrangler"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cf9405d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "def clean_data(df):\n",
+    "    #Calculate Mean\n",
+    "    df['mean'] = (df['0.5']*0.5 + df['1']*1.0 + df['1.5']*1.5 + df['2']*2.0 + df['2.5']*2.5 + df['3']*3.0 + df['3.5']*3.5 + df['4']*4.0 + df['4.5']*4.5 + df['5']*5.0)/df['total']\n",
+    "    df['mean'] = df['mean'].round(2)\n",
+    "    #Calculate Standard Deviation\n",
+    "    row = df\n",
+    "    mean = row['mean']\n",
+    "    df['variance'] = (\n",
+    "        ((row['0.5'] * (0.5 - mean) ** 2) +\n",
+    "        (row['1'] * (1.0 - mean) ** 2) +\n",
+    "        (row['1.5'] * (1.5 - mean) ** 2) +\n",
+    "        (row['2'] * (2.0 - mean) ** 2) +\n",
+    "        (row['2.5'] * (2.5 - mean) ** 2) +\n",
+    "        (row['3'] * (3.0 - mean) ** 2) +\n",
+    "        (row['3.5'] * (3.5 - mean) ** 2) +\n",
+    "        (row['4'] * (4.0 - mean) ** 2) +\n",
+    "        (row['4.5'] * (4.5 - mean) ** 2) +\n",
+    "        (row['5'] * (5.0 - mean) ** 2))\n",
+    "        / row['total']\n",
+    "        ).round(2)\n",
+    "    df['std_dev'] = np.sqrt(df['variance']).round(2)\n",
+    "    return df\n",
+    "\n",
+    "# Loaded variable 'df' from URI: /Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/Connor's Modified_data/user_distribution_and_reviews.csv\n",
+    "df = pd.read_csv(r\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/Connor's Modified_data/user_distribution_and_reviews.csv\")\n",
+    "\n",
+    "df_clean = clean_data(df.copy())\n",
+    "df_clean.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdfac147",
+   "metadata": {},
+   "source": [
+    "Code for Awarded Movies_first_1k Copy Pasted from Data Wrangler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dc9622e",
    "metadata": {},
    "outputs": [],
    "source": []
