put all the files into connor's modified data

--- a/modified_data/StatScript.ipynb
+++ b/modified_data/StatScript.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "309e8b2b",
    "metadata": {},
    "outputs": [],
@@ -245,13 +245,47 @@
    "id": "fdfac147",
    "metadata": {},
    "source": [
-    "Code for Awarded Movies_first_1k Copy Pasted from Data Wrangler"
+    "Code for incorporating z score copy Pasted from Data Wrangler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4dc9622e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract movie titles into a list\n",
+    "movie_titles = [\n",
+    "    \"anora\", \"conclave\", \"the-brutalist\", \"emilia-perez\", \"nickel-boys\", \n",
+    "    \"wicked-2024\", \"maria-2024\", \"oppenheimer-2023\", \"poor-things-2023\", \n",
+    "    \"the-holdovers\", \"american-fiction\", \"everything-everywhere-all-at-once\", \n",
+    "    \"all-quiet-on-the-western-front-2022\", \"the-fabelmans\", \n",
+    "    \"the-banshees-of-inisherin\", \"women-talking\", \"top-gun-maverick\", \n",
+    "    \"elvis-2022\", \"coda-2021\", \"the-power-of-the-dog\", \"west-side-story-2021\", \n",
+    "    \"dont-look-up-2021\", \"king-richard\", \"tick-tick-boom-2021\", \"dune-2021\", \n",
+    "    \"mank\", \"nomadland\", \"the-trial-of-the-chicago-7\", \"borat-subsequent-moviefilm\", \n",
+    "    \"promising-young-woman\", \"palm-springs-2020\", \"parasite-2019\", \"1917\", \n",
+    "    \"once-upon-a-time-in-hollywood\", \"jojo-rabbit\", \"green-book\", \"roma-2018\", \n",
+    "    \"black-panther\", \"bohemian-rhapsody\", \"eighth-grade\", \n",
+    "    \"can-you-ever-forgive-me\", \"the-favourite\", \"cold-war-2018\", \n",
+    "    \"the-shape-of-water\", \"three-billboards-outside-ebbing-missouri\", \n",
+    "    \"lady-bird\", \"get-out-2017\", \"call-me-by-your-name\", \"dunkirk-2017\", \n",
+    "    \"i-tonya\", \"blade-runner-2049\", \"moonlight-2016\", \"la-la-land\", \n",
+    "    \"hidden-figures\", \"arrival-2016\", \"lion\", \"spotlight\", \"the-big-short\", \n",
+    "    \"the-revenant-2015\", \"the-martian\", \"mad-max-fury-road\", \n",
+    "    \"birdman-or-the-unexpected-virtue-of-ignorance\", \"boyhood\", \n",
+    "    \"the-grand-budapest-hotel\", \"the-imitation-game\"\n",
+    "]\n",
+    "# Assign the list to a DataFrame\n",
+    "dfmovies = pd.DataFrame({\"movies\": [movie_titles]})\n",
+    "dfmovies.to_csv('/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/movies.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dc9622e",
+   "id": "56fb807f",
    "metadata": {},
    "outputs": [],
    "source": []
