Finishing up zscore calc script

--- a/modified_data/StatScript.ipynb
+++ b/modified_data/StatScript.ipynb
@@ -283,9 +283,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d9ce0b3",
+   "metadata": {},
+   "source": [
+    "Now to create our Z score spreadsheet for a given pair of dataframes "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "56fb807f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def zscorecalc(user,movie,name):\n",
+    "    dfuser = pd.read_csv(user)\n",
+    "    dfmovie = pd.read_csv(movie)\n",
+    "\n",
+    "    dfzscore = pd.Dataframe()\n",
+    "    dfzscore.columns = dfuser.columns\n",
+    "    dfzscore.drop(['0.5','1','1.5','2','2.5','3','3.5','4','4.5','5','total','mean','variance','std_dev'], axis=1, inplace=True)\n",
+    "    dfzscore['username'] = dfuser['username']\n",
+    "    dfzscore['user_mean'] = dfuser['mean']\n",
+    "\n",
+    "\n",
+    "    dfzscore.to_csv(name)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "774a5b86",
    "metadata": {},
    "outputs": [],
    "source": []
