--- a/modified_data/StatScript.ipynb
+++ b/modified_data/StatScript.ipynb
@@ -292,20 +292,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "56fb807f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'for' statement on line 9 (799366469.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[28], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    dfzscore.to_csv(name, index=False)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'for' statement on line 9\n"
+     ]
+    }
+   ],
    "source": [
     "def zscorecalc(user,movie,name):\n",
     "    dfuser = pd.read_csv(user)\n",
     "    dfmovie = pd.read_csv(movie)\n",
     "#open the input files\n",
-    "    dfzscore = dfuser.copy()\n",
+    "    dfzscore = dfuser.copy(deep=True)\n",
     "    dfzscore.drop(['0.5','1','1.5','2','2.5','3','3.5','4','4.5','5','total','mean','variance','std_dev'], axis=1, inplace=True)\n",
-    "    dfzscore['user_mean'] = dfuser['mean']\n",
-    "    dfzscore['user_std_dev'] = dfuser['std_dev']\n",
-    "    dfzscore.to_csv(name)\n",
+    "#Now need to calculate z scores\n",
+    "    for index, row in dfzscore.iterrows():\n",
+    "        for col_name in dfzscore.columns:\n",
+    "        # Perform computation on row[col_name]\n",
+    "            dfzscore.loc[index, col_name] = row[col_name] * 2  # Example: double the value\n",
+    "    dfzscore.to_csv(name, index=False)\n",
     "\n",
     "zscorecalc('/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/user_reviews_yes_late.csv', '/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/movie_reviews_all.csv', \"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/zscoretest.csv\")\n"
    ]
