Zscore calculator works!

--- a/modified_data/StatScript.ipynb
+++ b/modified_data/StatScript.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 88,
    "id": "56fb807f",
    "metadata": {},
    "outputs": [],
@@ -303,16 +303,16 @@
     "    dfmovie = pd.read_csv(movie)\n",
     "#open the input files\n",
     "    dfzscore = dfuser.copy(deep=True)\n",
+    "#Drop extra columns\n",
     "    dfzscore.drop(['0.5','1','1.5','2','2.5','3','3.5','4','4.5','5','total','mean','variance','std_dev'], axis=1, inplace=True)\n",
     "#Now need to calculate z scores\n",
+    "#Iterate through every row and column\n",
     "    for index, row in dfzscore.iterrows():\n",
     "        for col_name in dfzscore.columns:\n",
-    "            if type(dfzscore.loc[index,col_name]) == float and not(math.isnan(dfzscore.loc[index,col_name])):\n",
-    "                print(type(dfzscore.loc[index,col_name]))\n",
-    "                print(index)\n",
-    "                print(col_name)\n",
+    "            #Skip over the strings and NaN types\n",
+    "            if (type(dfzscore.loc[index,col_name]) != str) and (not(math.isnan(dfzscore.loc[index,col_name]))):\n",
     "        # Perform computation on row[col_name]=users review\n",
-    "                dfzscore.loc[index, col_name] = (dfzscore.loc[index,col_name]-dfuser.loc[index,'mean'])/dfuser.loc[index,'std_dev']   # Calculate user z-score\n",
+    "                dfzscore.loc[index, col_name] = ((dfzscore.loc[index,col_name]-dfuser.loc[index,'mean'])/dfuser.loc[index,'std_dev']).round(2)   # Calculate user z-score\n",
     "    dfzscore.to_csv(name, index=False)\n",
     "\n",
     "zscorecalc('/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/user_reviews_yes_late.csv', '/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/movie_reviews_all.csv', \"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/zscoretest.csv\")\n"
