Review Analysis Edit 2

--- a/new attempt/Post_Award_Review_Analysis.ipynb
+++ b/new attempt/Post_Award_Review_Analysis.ipynb
@@ -1212,49 +1212,15 @@
     "B: one_k_mean = 3, one_k_std_dev = 0.5, all_mean = 4.5\n",
     "\n",
     ", the change in B is more significant in some sense because there is a larger change in the \n",
-    "mean relative to the standard deviation. As a coarse approximation we'll just consider vectors \n",
-    "(C, S), where C = change in mean and S = standard deviation, and assign a distance by \n",
+    "mean relative to the standard deviation.\n",
     "\n",
-    "d(C,S) = 0.6 * C + 0.4 * S\n",
-    "\n",
-    "This 'rewards' changes with larger differences in means, but can still detect those where the changes \n",
-    "in mean are the same, but are larger relative to the standard deviation. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eaf3c969",
-   "metadata": {},
-   "source": [
-    "Ideally we want a function d to measure these sizes of changes which satisfy these properties: \n",
-    "\n",
-    "Regarding a movie as a vector A = (C_A, S_A) where C_A = change in mean for movie A, and \n",
-    "S = standard deviation for A, if we have two movies A and B we want \n",
-    "\n",
-    "1.) If C_A = C_B then d(A) >= d(B) iff S_A >= S_B\n",
-    "\n",
-    "2.) If S_A = S_B then d(A) >= d(B) iff C_A >= C_B\n",
-    "\n",
-    "3.) If C_A, S_A = 0 then d(A) = 0\n",
-    "\n",
-    "4*.) If we have four movies A, A', B, B' such that ..."
+    "For right now we need to include the standard deviations into the data frame as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "466f3132",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dist_func(C,S):\n",
-    "    return 0.6*C + 0.4*S"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "38817fbd",
+   "execution_count": 11,
+   "id": "cd3b4995",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1253,7 @@
          "type": "float"
         }
        ],
-       "ref": "53da3a64-d172-4082-b255-d28b6d989ee5",
+       "ref": "e392d7d7-d961-44f8-bc86-29d31f64fd4f",
        "rows": [
         [
          "boyhood",
@@ -1783,7 +1749,7 @@
        "[63 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,12 +1761,56 @@
     "    one_k_std_dev2.append(df_1k.loc[x,'std_dev'])\n",
     "\n",
     "df_changes['one_k_std_dev'] = one_k_std_dev2\n",
-    "df_changes\n",
+    "df_changes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaf3c969",
+   "metadata": {},
+   "source": [
+    "Ideally we want a function d to measure these sizes of changes which satisfy these properties: \n",
+    "\n",
+    "Regarding a movie as a vector A = (C_A, S_A) where C_A = change in mean for movie A, and \n",
+    "S = standard deviation for A, if we have two movies A and B we want \n",
+    "\n",
+    "1.) If C_A = C_B then d(A) >= d(B) iff S_A >= S_B\n",
+    "\n",
+    "2.) If S_A = S_B then d(A) >= d(B) iff C_A >= C_B\n",
+    "\n",
+    "3.) If C_A, S_A = 0 then d(A) = 0\n",
+    "\n",
+    "These three properties suggest some sort of linearity so that \n",
+    "\n",
+    "d(A) = w_C * C + w_S * S\n",
+    "\n",
+    "However the issue at the moment is the dependence on our choice of weights (w_C, w_S) since different weights can potentially give different results. To get rid of this, we'll just use all possible weights and instead consider d as a function d(A,w_C,w_S). Hence really have the \n",
+    "assignment A -> d_A(w_C, w_S). To get back to a number what we'll do next is to then consider the total size of the graph over some \n",
+    "predetermined domain, which in this case we'll choose to be (w_C, w_S) \\in [0,1] x [0,1]. In this light, really we want the association\n",
+    "\n",
+    "A -> \\int_{[0,1]^2} d_A(w_C, w_S) dw_C dw_S\n",
+    "\n",
+    "= \\int_[0,1] \\int_[0,1] C_A * w_C + S_A * w_S d w_C d w_S\n",
+    "\n",
+    "= 0.5*(C_A + S_A)\n",
+    "\n",
+    "so we just arrive back at the case of w_C = 1/2, w_S = 1/2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "466f3132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist_func(C,S):\n",
+    "    return 0.5*C + 0.5*S\n",
     "\n",
     "change_vectors_size = [dist_func(df_changes.loc[x,'mean_change'], df_changes.loc[x,'one_k_std_dev']) for x in df_changes['moviename']]\n",
     "\n",
     "df_changes['change_vectors_size'] = change_vectors_size\n",
-    "df_changes"
+    "df_changes_sorted = df_changes.sort_values(by = 'change_vectors_size') #Just to make the analysis easier"
    ]
   }
  ],
