Review Analysis Edit 3

--- a/Post_Award_Analysis/Post_Award_Review_Analysis.ipynb
+++ b/Post_Award_Analysis/Post_Award_Review_Analysis.ipynb
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "466f3132",
    "metadata": {},
    "outputs": [],
@@ -1810,8 +1810,17 @@
     "change_vectors_size = [dist_func(df_changes.loc[x,'mean_change'], df_changes.loc[x,'one_k_std_dev']) for x in df_changes['moviename']]\n",
     "\n",
     "df_changes['change_vectors_size'] = change_vectors_size\n",
-    "df_changes_sorted = df_changes.sort_values(by = 'change_vectors_size') #Just to make the analysis easier"
+    "df_changes_sorted = df_changes.sort_values(by = 'change_vectors_size') #Just to make the analysis easier\n",
+    "df_changes_sorted.to_csv('review_changes.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46bb666c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
