--- a/modified_data/connor_modified_data/z_scores/zscore_analysis_script.ipynb
+++ b/modified_data/connor_modified_data/z_scores/zscore_analysis_script.ipynb
@@ -14,20 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "4567a121",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nolate_1k = pd.read_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_nolate_1k.csv\")\n",
-    "nolate_all = pd.read_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_nolate_all.csv\")\n",
-    "yeslate_1k = pd.read_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_yeslate_1k.csv\")\n",
-    "yeslate_all = pd.read_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_yeslate_all.csv\")"
+    "nl_1k = pd.read_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_nolate_1k.csv\")\n",
+    "nl_all = pd.read_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_nolate_all.csv\")\n",
+    "yl_1k = pd.read_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_yeslate_1k.csv\")\n",
+    "yl_all = pd.read_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_yeslate_all.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "4dd50df5",
    "metadata": {},
    "outputs": [
@@ -35,24 +35,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0                  jay\n",
-      "1           deathproof\n",
-      "2         davidehrlich\n",
-      "3             thejoshl\n",
-      "4      colonelmortimer\n",
-      "            ...       \n",
-      "651    danyellowconnor\n",
-      "652             pzng97\n",
-      "653         suttercain\n",
-      "654             remobo\n",
-      "655         ezracubero\n",
-      "Name: username, Length: 656, dtype: object\n"
+      "     mean_nl_1k_rank  mean_nl_all_rank  mean_yl_1k_rank  mean_yl_all_rank\n",
+      "0              204.0             221.0            203.0             222.0\n",
+      "1              160.0             172.0            160.0             151.0\n",
+      "2              144.0             136.0            140.0             130.0\n",
+      "3               68.0              65.0             53.0              52.0\n",
+      "4               82.0              77.0             80.0              80.0\n",
+      "..               ...               ...              ...               ...\n",
+      "651            269.0             272.0            157.0             181.0\n",
+      "652             37.0              51.0             36.0              44.0\n",
+      "653            490.0             486.0            553.0             551.0\n",
+      "654             99.0             119.0            124.0             129.0\n",
+      "655            467.0             454.0            501.0             489.0\n",
+      "\n",
+      "[656 rows x 4 columns]\n",
+      "          username  mean_nl_1k  mean_nl_all  mean_yl_1k  mean_yl_all  \\\n",
+      "0              jay   -0.045000     0.217857   -0.008718     0.286923   \n",
+      "1       deathproof   -0.195833     0.065208   -0.234500    -0.039333   \n",
+      "2     davidehrlich   -0.330175    -0.150877   -0.366897    -0.195172   \n",
+      "3         thejoshl   -0.997059    -0.798039   -1.184262    -0.970000   \n",
+      "4  colonelmortimer   -0.865088    -0.656140   -0.865088    -0.656140   \n",
+      "\n",
+      "   mean_nl_1k_rank  mean_nl_all_rank  mean_yl_1k_rank  mean_yl_all_rank  \n",
+      "0              NaN               NaN              NaN               NaN  \n",
+      "1              NaN               NaN              NaN               NaN  \n",
+      "2              NaN               NaN              NaN               NaN  \n",
+      "3              NaN               NaN              NaN               NaN  \n",
+      "4              NaN               NaN              NaN               NaN  \n"
      ]
     }
    ],
    "source": [
-    "df = nolate_1k['username']\n",
-    "print(df)"
+    "df = pd.DataFrame()\n",
+    "df['username'] = nl_1k['username']\n",
+    "df['mean_nl_1k'] = nl_1k.iloc[:,1:].mean(axis=1)\n",
+    "df['mean_nl_all'] = nl_all.iloc[:,1:].mean(axis=1)\n",
+    "df['mean_yl_1k'] = yl_1k.iloc[:,1:].mean(axis=1)\n",
+    "df['mean_yl_all'] = yl_all.iloc[:,1:].mean(axis=1)\n",
+    "\n",
+    "rank_df = pd.DataFrame()\n",
+    "for col in df.columns[1:]:\n",
+    "    rank_df[col] = df[col].rank()\n",
+    "rank_df = rank_df.add_suffix('_rank')\n",
+    "print(rank_df)\n",
+    "frames = [df, rank_df]\n",
+    "merged_df = pd.concat(frames)\n",
+    "\n",
+    "print(merged_df.head(5))\n",
+    "\n",
+    "merged_df.to_csv(\"/Users/connorlockhart/Documents/GitHub/fall-2025-predicting-movie-success/modified_data/connor_modified_data/z_scores/zscore_collection.csv\", index = False)\n",
+    "\n",
+    "\n"
    ]
   },
   {
