collection fixed, merged data frames wrong

--- a/modified_data/connor_modified_data/z_scores/zscore_analysis_script.ipynb
+++ b/modified_data/connor_modified_data/z_scores/zscore_analysis_script.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "4dd50df5",
    "metadata": {},
    "outputs": [
@@ -57,11 +57,11 @@
       "4  colonelmortimer   -0.865088    -0.656140   -0.865088    -0.656140   \n",
       "\n",
       "   mean_nl_1k_rank  mean_nl_all_rank  mean_yl_1k_rank  mean_yl_all_rank  \n",
-      "0              NaN               NaN              NaN               NaN  \n",
-      "1              NaN               NaN              NaN               NaN  \n",
-      "2              NaN               NaN              NaN               NaN  \n",
-      "3              NaN               NaN              NaN               NaN  \n",
-      "4              NaN               NaN              NaN               NaN  \n"
+      "0            204.0             221.0            203.0             222.0  \n",
+      "1            160.0             172.0            160.0             151.0  \n",
+      "2            144.0             136.0            140.0             130.0  \n",
+      "3             68.0              65.0             53.0              52.0  \n",
+      "4             82.0              77.0             80.0              80.0  \n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
     "rank_df = rank_df.add_suffix('_rank')\n",
     "print(rank_df)\n",
     "frames = [df, rank_df]\n",
-    "merged_df = pd.concat(frames)\n",
+    "merged_df = pd.concat(frames,axis=1)\n",
     "\n",
     "print(merged_df.head(5))\n",
     "\n",
